dropdown autocomplete menu wider, with fixed height and scrollbar

--- a/app/css/editor.css
+++ b/app/css/editor.css
@@ -43,6 +43,10 @@ div.right-panel{
 .ui-autocomplete{
 	position: relative;
 	z-index: 2000;
+ 	max-height: 200px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding-right: 20px;
 }
 
 
